# NeuralNetworks

./: .gitignore  AGENTS.md  KnnMain.py  NnMain.py  README.md  chess_runtime.sh  knn_main.py  nn_main.py  pyproject.toml  requirements.txt  tictactoe_rebuild.sh  tictactoe_run.sh
.circleci/: config.yml
.github/workflows/: build-workflow.yml  release.yml  test.yml
BasicNeuralNetwork/: main.py
Chess/: Process.py
Chess/Data/: state.json
Chess/Helper/: DefaultPredictor.py  Generator.py
Chess/Test/: test_dictionary.py
DNASeq/: main.R
GameTheory/: Process.py
KNN/: Chart.py  DataPreparation.py  main.py
NN/: NnCore.py  Perceptron.py
NN/test/: TestRunner.py
TF/: gpu_test.py  neural_network.py
docs/architecture/: qlearning_algorithm.puml
docs/domain/: games-theory-domain.md  ml-sandbox-domain.md
docs/guidelines/: engineering-guide.md  engineering-guidelines.md  production-package-guide.md  production-package.md  project-lifecycle.md  release-workflow.md  (+1 more)
game_theory/: process.py  version_bump.py
games_theory/: AGENTS.md  README.md  changelog  generate_changelog.sh  process.py  requirements.txt  version_bump.py
knn/: chart.py  data_preparation.py  knn_core.py  knn_main.py
nn/: nn_core.py  nn_main.py
scratch/: KNN.py  LineSeparation2.py  LineSeparation3.py  LogicGates.py  line_separation.py  line_separation2.py  line_separation3.py
scripts/: create_version_update_pr.py  generate_release_notes.py  prepare_release.py  requirements.txt  set_package_version.py  test_release_tools.py  tictactoe_rebuild.sh  tictactoe_run.sh  verify.sh
(+57 files in other folders)
